[package]
name = "elgamal"
version = "0.2.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]

[lib]
name = "elgamal"
path = "src/lib.rs"

[dependencies]
rust-crypto     = "^0.2"
num             = "0.1.32"
rand            = "0.3.14"
rustc-serialize = "0.3.19"
modal           = { git = "https://github.com/lambdaxymox/modal" }
